Archive2/22/566314a7b5a991/output
main.cpp: In instantiation of 'Obj<T>::Obj(Args&& ...) [with Args = {int, int, float}; T = int]':
main.cpp:28:26:   required from here
main.cpp:17:5: error: static assertion failed: !!
     static_assert (all_is<T, remove_reference_t<Args> ...>::value, "!!");
     ^
